--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: home
-title: My website
-subtitle: Welcoming page for berkay's personal website
+title: Berkay Kicanaoglu
+subtitle: WIP
 ---
