--- a/index.html
+++ b/index.html
@@ -2,5 +2,5 @@
 layout: home
 title: Berkay Kicanaoglu
 subtitle: WIP
-cover-img: /assets/img/DALL-E_amsterdam_banner.png
+cover-img: ["/assets/img/DALL-E_amsterdam_banner.png", "/assets/img/DALL-E_amsterdam_banner_2.png"]
 ---
